# cmd/api/main.go
@@ -3,6 +3,10 @@
 // @version 1.0
 // @host localhost:8081
 // @BasePath /api/v1
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Type "Bearer" followed by a space and JWT token.
 package main
 
 import (
